--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <i class="fas fa-bars"></i>
     </label>
 
-    <label class="logo">CREATIVE SOLUTIONS</label>
+    <label class="logo">CS</label>
     <ul>
       <li><a class="active" href="#">Home</a></li>
       <li><a href="contact.html">Contact</a></li>
